[tool.poetry]
name = "enpass-cli"
version = "0.1.0"
description = "Use Enpass vault from command line"
authors = ["Kiss, György"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.6"
pysqlcipher3 = "^1.0.3"
pycrypto = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
